mobile dropdown content visibility fix

--- a/wp-content/themes/mihsa/assets/css/custom.scss
+++ b/wp-content/themes/mihsa/assets/css/custom.scss
@@ -336,6 +336,7 @@ nav[data-sm] {
 			position: relative;
 			padding: 1rem;
 			padding-inline-start: 2rem;
+			visibility: visible;
 		}
 	}
 }
